# DAUS

./: LICENSE  README.md  pyproject.toml
docs/: daus_algorithm_design.md
src/daus/: __init__.py  audit.py  calculator.py  schemas.py  utility.py
tests/: test_daus_core.py  test_daus_independence.py  test_shuyuan_daus.py
